update guide Introduction to Stylus

--- a/src/guides/main/introduction-to-stylus-arbitrum-university-536.yaml
+++ b/src/guides/main/introduction-to-stylus-arbitrum-university-536.yaml
@@ -1,12 +1,47 @@
 categories: []
 content: Delving deeper into stylus blockchain
-created: '2023-10-31T17:44:16.570Z'
+created: '2023-11-10T14:06:37.037Z'
 guideType: onboarding
 key: introduction-to-stylus-arbitrum-university-536
 name: 'Introduction to Stylus '
 publishStatus: Live
 steps:
   - content: >-
+      ## Introduction to Stylus 
+
+      ### What is stylus 
+
+      ### Importance of stylus
+
+
+      ## How does it work?
+
+      ### try and create diagram
+
+
+      ## How to add a new programming language to Stylus
+
+
+      ## How to run a local dev node with Stylus support
+
+
+      ## How to reduce the size of Stylus WASM binaries
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       ## Stylus Overview
 
 
