--- a/src/guides/main/introduction-to-stylus-arbitrum-university-536.yaml
+++ b/src/guides/main/introduction-to-stylus-arbitrum-university-536.yaml
@@ -1,33 +1,51 @@
 categories: []
 content: Delving deeper into stylus blockchain
-created: '2023-11-10T14:06:37.037Z'
+created: '2023-11-10T17:09:38.689Z'
 guideType: onboarding
 key: introduction-to-stylus-arbitrum-university-536
 name: 'Introduction to Stylus '
 publishStatus: Live
 steps:
-  - content: >-
-      ## Introduction to Stylus 
+  - content: >+
+      ## What is stylus 
 
-      ### What is stylus 
-
-      ### Importance of stylus
-
-
-      ## How does it work?
-
-      ### try and create diagram
-
-
-      ## How to add a new programming language to Stylus
-
-
-      ## How to run a local dev node with Stylus support
-
-
-      ## How to reduce the size of Stylus WASM binaries
+      Stylus is a cutting-edge tool designed to enhance the development of smart
+      contracts on the Arbitrum platform, which is part of the broader Ethereum
+      ecosystem. It expands the capabilities of smart contract creation on the
+      Arbitrum platform by allowing developers to utilize a wide array of
+      programming languages that compile into WebAssembly (WASM). This means
+      that languages such as Rust, C, and C++ can now be employed to write
+      EVM-compatible smart contracts. This is enabled through the use of the
+      Stylus Software Development Kit (SDK) and its accompanying command-line
+      interface (CLI) tool. It leverages Arbitrum's existing WASM infrastructure
+      to ensure that these smart contracts benefit from the platform's efficient
+      execution environment, which translates into faster performance and
+      reduced gas costs. This efficiency gain is attributed to WASM's modern
+      binary format, known for speed, portability, and security. 
 
 
+      Stylus represents an upgrade to Arbitrum Nitro, a technology stack that
+      powers various Arbitrum chains, and is part of the EVM+ paradigm,
+      maintaining full interoperability with existing Solidity contracts. The
+      innovation of Stylus lies in its ability to deterministically prove the
+      correctness of any program that compiles to WASM, owing to Arbitrum
+      Nitro's unique fraud-proving capabilities, which are integral to
+      maintaining network integrity and trust.
+
+
+      ## Importance of stylus
+
+      Stylus has transformed the developement of smart constracts. Some of the
+      key advantages are:
+
+
+      1. ### Multi-Language Support
+
+      2. ### EVM Compatibility 
+
+      3. ### Cost-Effective Advanced Cryptography
+
+      ### 4. Opt-In Reentrancy Protection
 
 
 
@@ -40,66 +58,7 @@ steps:
 
 
 
-
-
-      ## Stylus Overview
-
-
-      Stylus is a revolutionary platform that allows developers to write smart
-      contracts for the Ethereum blockchain using popular programming languages
-      like Rust, C, and C++. This is a significant departure from the
-      traditional approach, which primarily relies on the Solidity programming
-      language. By supporting multiple programming languages, Stylus invites a
-      broader range of developers to the Ethereum ecosystem. Those proficient in
-      Rust, C, or C++ can now contribute without learning Solidity from scratch.
-
-
-      Stylus is built on top of Arbitrum Nitro, a tech stack upgrade that powers
-      Arbitrum One, Arbitrum Nova, and Arbitrum Orbit chains. It introduces a
-      second virtual machine, the WebAssembly (WASM) virtual machine, alongside
-      the Ethereum Virtual Machine (EVM). This allows smart contracts written in
-      programming languages that compile down to WASM to be executed on the
-      Arbitrum blockchain.
-
-
-      ##  Benefits of Stylus
-
-
-      The key advantages of Stylus include:
-
-
-      #### Expediated and Secure Development
-
-
-      It leverages existing libraries and modules available in Rust and C++.
-      Developers can use these resources to expedite development and introduce
-      more functionalities. Additionally, different programming languages have
-      various security features, and Stylus allows developers to use the most
-      secure practices from each language.
-
-
-      #### Lower Gas Fee
-
-
-      The use of WASM brings several benefits to Stylus smart contracts. WASM
-      programs are significantly more efficient, resulting in faster execution
-      and lower gas fees. Memory usage is also cheaper, unlocking new use cases
-      that were previously not viable on the blockchain. WASM is a modern binary
-      format that is widely supported by web browsers and programming languages,
-      making it a versatile choice for smart contract development.
-
-
-      #### Greater Efficiency
-
-
-      Stylus aims to make smart contract development more accessible and
-      efficient by allowing developers to use their favorite programming
-      languages. It expands the possibilities of what developers can achieve on
-      the Ethereum blockchain and fosters a cohesive ecosystem where different
-      applications can work together. With its faster execution, reduced fees,
-      and interoperability with the Ethereum Virtual Machine, Stylus is poised
-      to revolutionize the way smart contracts are written and deployed.
-    name: What is Stylus?
+    name: Introduction to Stylus
     stepItems: []
     uuid: c4c75764-bd0f-4590-8594-c928d4994600
   - content: ''
@@ -182,113 +141,21 @@ steps:
       vulnerability that developers often struggle to mitigate in Solidity. By
       default, reentrancy is disabled in Rust, unless intentionally overridden,
       providing an added layer of protection against potential exploits.
-    name: Features of Stylus
+    name: How does it Work?
     stepItems: []
     uuid: 2c531825-b9c2-488f-a24b-c0991f2972ca
   - content: ''
     name: Evaluation
     stepItems: []
     uuid: 6ffd959e-56e9-41a1-8844-eeb5374a8441
-  - content: >-
-      ## Working of Stylus
-
-
-      Stylus is not just another smart contract platform; it represents an
-      evolutionary step in decentralized application development, offering
-      capabilities beyond its predecessors. It's designed to unlock new horizons
-      for developers and validators. Here's a deep dive into its lifecycle:
-      coding, compilation, execution, and proving.
-
-
-      #### Coding
-
-
-      At the heart of any program lies its code - the digital DNA that
-      determines its function and behavior. Stylus is versatile, catering to
-      multiple languages that can be compiled into WebAssembly (WASM). While
-      developers have the freedom to utilize a plethora of languages, Stylus
-      initially offers streamlined support for Rust, C++, C, and “BF”. Notably,
-      Stylus enriches these languages with an “Ethereum API”, allowing
-      functionalities akin to what Solidity offers, only with more dynamism and
-      flexibility. So, whether it's harnessing official cryptographic reference
-      implementations or crafting a brand-new functionality, Stylus ensures
-      compatibility and efficiency.
-
-
-      #### Compilation
-
-
-      A Stylus program undergoes a dual-phase compilation. Initially,
-      developers, using their trusted compilers like Clang, transform their
-      high-level code into WASM. This WASM, once posted on-chain, sets the
-      deterministic behavior of the contract. But the magic amplifies when the
-      ArbWasm precompile steps in. This process transforms the WASM into a
-      node's native assembly, ensuring efficient and tailored execution.
-      Instrumentation, added during this phase, not only assures optimized
-      execution but also ensures that the program aligns with blockchain safety
-      and fraud prevention standards. 
-
-
-      #### Execution
-
-
-      Stylus contracts come alive through Wasmer, a state-of-the-art WASM
-      runtime. The agility of Wasmer ensures that Stylus contracts are executed
-      at lightning speeds, translating to tangible gas savings. Simultaneously,
-      the platform respects its Ethereum roots. The system intelligently
-      discerns between an EVM contract and a WASM program, ensuring seamless
-      interoperability. Contracts, whether they hail from Solidity or WASM
-      arenas, communicate, and cooperate without any hitches.
-
-
-      #### Proving
-
-
-      In the world of Nitro, where trust and transparency reign supreme, Stylus
-      stands as a testament to enhanced security. It gracefully extends Nitro's
-      fraud-proving prowess. If discrepancies arise, Nitro and Stylus join
-      forces, dissecting execution histories, be it native or WASM. The
-      robustness of this system guarantees determinism, ensuring that every
-      action, every opcode, undergoes rigorous scrutiny. The safety net it
-      offers isn't just theoretical; Stylus has a working fraud prover in place,
-      marking a leap in smart contract integrity.
-    name: Working of Stylus
+  - content: ''
+    name: Smart Contracts
     stepItems: []
     uuid: 06c60302-2c7f-4951-88e4-44318ccd0507
   - content: ''
     name: Evaluation
     stepItems: []
     uuid: 86f2ddbd-3798-4123-a17a-9eb2c3a70015
-  - content: >-
-      https://docs.arbitrum.io/stylus/how-tos/adding-support-for-new-languages
-
-
-      https://pgrandinetti.github.io/compilers/page/how-to-build-a-new-programming-language/
-    name: Adding Programming Language
-    stepItems: []
-    uuid: 3e80e9f0-0c11-4bb4-959c-ae1be14f33c5
-  - content: ''
-    name: Evaluation
-    stepItems: []
-    uuid: b4436542-96d0-4c03-adf3-eebb6b76b0e4
-  - content: |+
-      https://docs.arbitrum.io/stylus/how-tos/local-stylus-dev-node
-
-    name: Running a Local Stylus Dev Node
-    stepItems: []
-    uuid: 5572f53f-c444-4ea5-963e-3cb9c256bbd7
-  - content: ''
-    name: Evaluation
-    stepItems: []
-    uuid: 7cdd1dc7-3526-4107-b5bf-55c9002665ef
-  - content: https://docs.arbitrum.io/stylus/how-tos/optimizing-binaries
-    name: Reducing WASM Binary Size
-    stepItems: []
-    uuid: 425bcdc8-5f40-47d9-abb5-1616beead56e
-  - content: ''
-    name: Evaluation
-    stepItems: []
-    uuid: 2c856c6f-58e4-4320-bda7-787c5a7be17d
   - content: >-
       https://docs.arbitrum.io/stylus/stylus-gentle-introduction
 
