--- a/src/guides/main/introduction-to-stylus-arbitrum-university-536.yaml
+++ b/src/guides/main/introduction-to-stylus-arbitrum-university-536.yaml
@@ -1,12 +1,12 @@
 categories: []
 content: Delving deeper into stylus blockchain
-created: '2023-11-10T17:09:38.689Z'
+created: '2023-11-10T17:18:45.034Z'
 guideType: onboarding
 key: introduction-to-stylus-arbitrum-university-536
 name: 'Introduction to Stylus '
 publishStatus: Live
 steps:
-  - content: >+
+  - content: >-
       ## What is stylus 
 
       Stylus is a cutting-edge tool designed to enhance the development of smart
@@ -39,25 +39,35 @@ steps:
       key advantages are:
 
 
-      1. ### Multi-Language Support
-
-      2. ### EVM Compatibility 
-
-      3. ### Cost-Effective Advanced Cryptography
-
-      ### 4. Opt-In Reentrancy Protection
+      **1. Multi-Language Support:** Stylus broadens access to Arbitrum's
+      blockchain development by accommodating a variety of programming
+      languages. With only 20,000 Solidity developers, the inclusion of Rust and
+      C—with their combined 15 million developers—could greatly accelerate the
+      platform's growth and user adoption.
 
 
+      **2. EVM Compatibility:** Stylus combines the traditional benefits of the
+      EVM with improved efficiency and a rich set of libraries from languages
+      like Rust, C, and C++, elevating the standard for smart contract
+      development without altering EVM's core functionality.
 
 
+      **3. Cost-Effective Advanced Cryptography:** Stylus enables previously
+      impractical use cases with more than tenfold computational and over a
+      hundredfold memory efficiency improvements. It allows for the deployment
+      of custom cryptography libraries, fostering a new era of blockchain
+      innovation.
 
 
+      **4. Opt-In Reentrancy Protection:** Stylus not only saves money and runs
+      faster but also increases security. It automatically guards against
+      reentrancy, a common problem in smart contracts, and this feature is
+      turned on from the start to prevent issues.
 
 
-
-
-
-
+      **5. Full Interoperability:** Solidity and WASM programs can work together
+      smoothly. Developers can mix languages, using Solidity to run Rust code,
+      or vice versa, without any extra setup.
     name: Introduction to Stylus
     stepItems: []
     uuid: c4c75764-bd0f-4590-8594-c928d4994600
