update guide Arbitrum Bridge

--- a/src/guides/main/arbitrum-bridge-arbitrum-university-959.yaml
+++ b/src/guides/main/arbitrum-bridge-arbitrum-university-959.yaml
@@ -1,12 +1,60 @@
 categories: []
 content: 'Arbitrum Bridge: Seamless L1 to L2 Asset Transfer'
-created: '2023-11-03T11:53:21.904Z'
+created: '2023-11-13T11:40:03.489Z'
 guideType: onboarding
 key: arbitrum-bridge-arbitrum-university-959
 name: 'Arbitrum Bridge '
 publishStatus: Live
 steps:
   - content: >-
+      ## Intro to Arbitrum Brideg 
+
+      ### What is a blockchain bridge 
+
+      ### what is Arbitrum bridge 
+
+      ### Puporse of Arbitrum Bridge 
+
+
+      ## L1 and L2 Bridging
+
+      ### L1 contracts can submit L2 transactions
+
+      ### L1 to L2 ticket-based transactions
+
+      ### L2 to L1 ticket-based calls
+
+
+      ## Dipositing using Arbitrum Bridge 
+
+      ### Step by Step Guide 
+
+
+      ## Withdrawing using arbitrum bridge 
+
+      ### step by steam guide 
+
+
+      ## Btidging tokens
+
+      ### how to bridge tokens using abitrum bridge 
+
+      ### step by step guide
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       ## What is a Blockchain Bridge?
 
 
