--- a/src/guides/main/arbitrum-bridge-arbitrum-university-959.yaml
+++ b/src/guides/main/arbitrum-bridge-arbitrum-university-959.yaml
@@ -1,107 +1,63 @@
 categories: []
 content: 'Arbitrum Bridge: Seamless L1 to L2 Asset Transfer'
-created: '2023-11-13T12:17:12.582Z'
+created: '2023-11-13T13:32:48.146Z'
 guideType: onboarding
 key: arbitrum-bridge-arbitrum-university-959
 name: 'Arbitrum Bridge '
 publishStatus: Live
 steps:
   - content: >-
-      ## Intro to Arbitrum Brideg 
+      ## What is Arbitrum Bridge?
 
-      ### What is a blockchain bridge 
-
-      ### what is Arbitrum bridge 
-
-      ### Puporse of Arbitrum Bridge 
-
-
-      ## L1 and L2 Bridging
-
-      ### L1 contracts can submit L2 transactions
-
-      ### L1 to L2 ticket-based transactions
-
-      ### L2 to L1 ticket-based calls
-
-
-      ## Dipositing using Arbitrum Bridge 
-
-      ### Step by Step Guide 
+      The Arbitrum Bridge is a sophisticated mechanism that connects Ethereum's
+      mainnet (Layer-1) with the Arbitrum chains (Layer-2), allowing for the
+      secure and efficient transfer of assets like ETH and ERC-20 tokens. It
+      enhances scalability by handling a greater volume of transactions and
+      mitigates congestion on the mainnet. The bridge is cost-effective,
+      grouping transactions to reduce gas fees significantly. Security is
+      paramount, with Ethereum's security model integrated and additional
+      safeguards against malicious actions by validators. The bridge supports a
+      wide range of assets, ensuring broad interoperability, and maintains
+      decentralization by allowing open participation of validators. With a
+      user-friendly interface, it simplifies asset transfer across layers,
+      aligning with Arbitrum's goal to improve the Ethereum ecosystem's
+      functionality and user experience.
 
 
-      ## Withdrawing using arbitrum bridge 
+      ## How do Bridges Work?
 
-      ### step by steam guide 
-
-
-      ## Btidging tokens
-
-      ### how to bridge tokens using abitrum bridge 
-
-      ### step by step guide
+      Bridges like the Arbitrum bridge work by transferring the computational
+      workload from Ethereum’s main network (Layer 1) to the Arbitrum network
+      (Layer 2). This transfer is done while maintaining the security features
+      of Ethereum. Here's how it happens:
 
 
+      ### Minting Assets
+
+      When users want to move their assets, such as ETH or ERC-20 tokens, to
+      Layer 2, they interact with the Arbitrum bridge. The bridge locks the
+      user's assets into a smart contract on Ethereum, meaning those assets
+      can't be moved within Layer 1 anymore. At the same time, an equivalent
+      amount of these assets is created or "minted" on the Arbitrum network,
+      which users can freely move and use. This minting process uses roll-up
+      technology, which bundles many transactions into one. This batching
+      reduces the amount of processing Ethereum has to do, which saves on
+      transaction fees, known as gas fees, and allows for more transactions to
+      be processed at once, thereby increasing scalability.
 
 
+      ### Burning Assets 
 
-
-
-
-
-
-
-
-
-
-
-      ## What is a Blockchain Bridge?
-
-
-      A blockchain bridge is a protocol that connects two separate blockchain
-      networks, allowing for the exchange of tokens and information between
-      them. It acts as a link or a bridge that enables cross-chain interactions,
-      making the blockchain world more interconnected and collaborative.
-
-
-      The process of transferring assets through a blockchain bridge usually
-      involves a lock and mint <-> burn and unlock system. The bridge locks the
-      assets on the source chain, then mints an equivalent number of wrapped
-      assets on the destination chain. These wrapped assets can be burned to
-      unlock the original assets on the source chain.
-
-
-      There are various types of blockchain bridges, but most popular ones
-      support a wide range of assets and multiple blockchains. They typically
-      charge a small fee for the transfer, usually ranging from 0.01% to 0.05%
-      of the bridged amount. However, some bridges, especially official ones,
-      have zero fees besides the gas costs.
-
-
-      ## Benefits of Blockchain Bridge
-
-
-      #### Creating Interoperable Blockchain Ecosystem
-
-
-      The main purpose of a blockchain bridge is to create an interoperable
-      blockchain ecosystem, where different networks can communicate and work
-      together. Before the introduction of bridges, each blockchain operated
-      independently, and users had to maintain balances on each blockchain they
-      wanted to interact with. This meant holding assets and gas tokens on
-      multiple chains, which was inconvenient and inefficient.
-
-
-      #### No Requirement for Centralized Intermediary
-
-
-      With a blockchain bridge, users can seamlessly move assets from one chain
-      to another without the need for a centralized intermediary. The bridge
-      ensures that the supply of tokens remains constant across both networks
-      during the transfer process. This allows for greater flexibility and
-      expands the capabilities of tokens, as they can now migrate across
-      different blockchain networks.
-    name: Blockchain Bridge
+      For withdrawals from Arbitrum back to Ethereum, the process is reversed
+      but includes an additional security step. The tokens on Arbitrum are
+      burnt, meaning they are destroyed to prevent double-spending.
+      Correspondingly, the smart contract on Ethereum releases the initially
+      locked funds. This transaction is not immediate due to a "dispute period,"
+      a week-long delay that allows for challenges and verification of the
+      transaction's legitimacy on Ethereum before the assets are unlocked. This
+      delay ensures the integrity and security of the withdrawal process,
+      safeguarding the assets as they transition from Layer 2 back to Layer 1.
+    name: 'About Arbitrum Bridge '
     stepItems: []
     uuid: 68eec6db-69ca-4477-8c76-00c8f4200dcb
   - content: ''
@@ -130,6 +86,26 @@ steps:
         explanation: Explanation of the question
     uuid: 059345d4-d9d4-4b9f-b0fd-2b72e8812a73
   - content: >-
+      ### L1 contracts can submit L2 transactions
+
+      ### L1 to L2 ticket-based transactions
+
+      ### L2 to L1 ticket-based calls
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       ## Arbitrum Bridge
 
 
@@ -190,7 +166,7 @@ steps:
       period" for withdrawals. This means that withdrawals are delayed for
       approximately one week to allow the Layer 2 network's state to be
       challenged and verified on Ethereum before the funds are released.
-    name: What is Arbitrum Bridge?
+    name: L1 and L2 Bridging
     stepItems: []
     uuid: e57a1b9d-454b-49bf-a296-8e6a40ff692e
   - content: ''
@@ -382,6 +358,18 @@ steps:
     name: Evaluation
     stepItems: []
     uuid: 095de5d0-5e63-480e-9e09-2e4c4e5e57e9
+  - content: >-
+      ## Step 1 
+
+
+      -
+      https://www.tokenmetrics.com/blog/arbitrum-bridge#key-features-of-the-arbitrum-bridge
+
+
+      - https://www.binance.com/en/feed/post/665165
+    name: 'Reference '
+    stepItems: []
+    uuid: e3add110-f5dd-4446-aec4-1766109c4464
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_bridge_arbitrum_university_959/1699877827641_rectangle_100.png
 uuid: arbitrum-bridge-arbitrum-university-959
