--- a/src/guides/main/arbitrum-bridge-arbitrum-university-959.yaml
+++ b/src/guides/main/arbitrum-bridge-arbitrum-university-959.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Arbitrum Bridge: Seamless L1 to L2 Asset Transfer'
-created: '2023-11-13T13:53:21.317Z'
+created: '2023-11-13T14:06:59.287Z'
 guideType: onboarding
 key: arbitrum-bridge-arbitrum-university-959
 name: 'Arbitrum Bridge '
@@ -335,7 +335,7 @@ steps:
       in the "How to bridge tokens via Arbitrum's standard gateway" section, you
       can easily initiate the bridging process and ensure a smooth transfer of
       tokens between the two networks.
-    name: How to bridge tokens
+    name: Ways to Bridge Tokens
     stepItems: []
     uuid: df19894b-5fce-4857-b6a6-87e4e9fd3311
   - content: ''
