--- a/src/guides/main/cross-chain-messaging-arbitrum-university-977.yaml
+++ b/src/guides/main/cross-chain-messaging-arbitrum-university-977.yaml
@@ -1,12 +1,37 @@
 categories: []
 content: Bridging Blockchains with Seamless Communication
-created: '2023-11-13T12:17:53.823Z'
+created: '2023-11-13T14:44:47.533Z'
 guideType: onboarding
 key: cross-chain-messaging-arbitrum-university-977
 name: Cross Chain Messaging
 publishStatus: Live
 steps:
   - content: >-
+      ## L1 to L2 messaging
+
+      ### what are retryable tickets 
+
+      ### lIfecycle of retryable tickets 
+
+
+      ## Other Concepts 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       ## Retryable Tickets
 
 
