--- a/src/guides/main/cross-chain-messaging-arbitrum-university-977.yaml
+++ b/src/guides/main/cross-chain-messaging-arbitrum-university-977.yaml
@@ -1,93 +1,77 @@
 categories: []
 content: Bridging Blockchains with Seamless Communication
-created: '2023-11-13T14:44:47.533Z'
+created: '2023-11-13T17:09:58.380Z'
 guideType: onboarding
 key: cross-chain-messaging-arbitrum-university-977
 name: Cross Chain Messaging
 publishStatus: Live
 steps:
   - content: >-
-      ## L1 to L2 messaging
+      ## What is Cross Chain Messaging?
 
-      ### what are retryable tickets 
-
-      ### lIfecycle of retryable tickets 
-
-
-      ## Other Concepts 
-
-
-
+      Cross-chain messaging is the process of transferring data, tokens, and
+      other types of assets between different blockchain networks. Blockchains
+      traditionally operate in silos, meaning they function independently and
+      cannot natively share information or assets with one another. Cross-chain
+      technology aims to bridge this gap, allowing for interoperability, or the
+      ability for diverse blockchain networks to communicate and interact
+      seamlessly.
 
 
+      Cross-chain messaging works through smart contracts that facilitate the
+      free flow of information between isolated blockchain networks. This
+      creates a decentralized network where users can interact with dApps across
+      different chains in a verifiable and trustless manner, supported by
+      on-chain validators, without the need for manual navigation through
+      bridges. This interconnectedness promises a streamlined and decentralized
+      Web3 ecosystem, enhancing user experience and enabling developers to offer
+      more integrated and efficient dApp services.
 
 
+      ## Need for Cross Chain Messaging
+
+      Cross-chain messaging is essential for addressing several needs in the
+      cryptocurrency sector:
 
 
+      1. **Asset Interoperability**: It allows for the seamless transfer of
+      assets between different blockchains, helping to reduce the fragmentation
+      of capital. By enabling this flow, smaller blockchains can access the
+      liquidity and user base of larger ones, increasing overall capital
+      efficiency and improving liquidity conditions.
 
 
+      2. **Decentralization**: Cross-chain technology supports the decentralized
+      movement of funds, reducing reliance on centralized entities or
+      custodians. This trustless nature of technology is a core principle of
+      blockchain interoperability, promoting a more decentralized financial
+      ecosystem.
 
 
+      3. **Minimizing Fragmentation and Improving Composability**: As the
+      blockchain space grows, a smart contract's ability to interact natively is
+      limited to its home network. Cross-chain messaging opens up the
+      possibility for these contracts to interact beyond their native chains,
+      thus reducing the issues of fragmented liquidity and improving the
+      composability of applications across the broader blockchain landscape.
 
 
+      4. **Efficient Resource Utilization**: Deploying applications on multiple
+      chains consumes significant development resources. Cross-chain messaging
+      aims to streamline this process, enabling applications to interact across
+      chains without the need for separate deployments, which allows developers
+      to focus on improving the core functionality of their applications. 
+    name: Cross Chain Messaging
+    stepItems: []
+    uuid: 2b2cd485-6d77-4bb6-ab60-a13ab658feb0
+  - content: ''
+    name: Evaluation
+    stepItems: []
+    uuid: 0b537aa5-d7f1-41bf-88e1-f0b38af513dc
+  - content: |-
+      ## What are Retryable Tickets?
 
-
-      ## Retryable Tickets
-
-
-      Retryable tickets are a crucial method for creating L1 to L2 messages in
-      the Arbitrum network. These tickets allow L1 transactions to initiate
-      messages that are executed on L2. The Retryable Tickets Lifestyle includes
-      various stages such as:
-
-
-      #### Submission of Retryable Tickets
-
-
-      To create a retryable ticket, a user needs to call the
-      createRetryableTicket function of the inbox contract. This function
-      requires the sender to provide a reasonable amount of funds to cover the
-      submission and execution of the ticket. The funds are deducted from the
-      sender and placed into an escrow for later use in redeeming the ticket.
-      The creation of a ticket on L1 is separate from its execution on L2, so a
-      successful L1 ticket creation does not guarantee a successful redemption.
-
-
-      #### Auto-Redemption
-
-
-      After a ticket is successfully created, two conditions are checked before
-      attempting to execute it on L2. First, the user's L2 balance must be
-      sufficient to cover the gas fees for execution. Second, the gas price
-      provided by the user must be greater than or equal to the L2 base fee. If
-      these conditions are met, the ticket is auto-redeemed, and the execution
-      takes place with the original submission's parameters. The submission fee
-      is refunded to the user on L2.
-
-
-      #### Manual Redemption
-
-
-      If a ticket is not auto-redeemed or the initial redemption fails, the
-      submission fee is collected on L2 to cover the resources required to keep
-      the ticket in memory for a fixed period. In this case, a manual redemption
-      of the ticket is required. Anyone can attempt to manually redeem the
-      ticket by calling the redeem precompile method. The gas for the redemption
-      attempt comes from the call to redeem, ensuring that the block's gas limit
-      is not reached before execution.
-
-
-      #### Ticket Expiration
-
-
-      If a ticket is not redeemed or rescheduled within seven days, it expires
-      and is automatically discarded. However, the ticket can be kept alive for
-      another full period if a fee is paid. It is important to note that if a
-      ticket expires without being redeemed, any message and value it carries
-      could be lost without the possibility of recovery.
-
-
-      TO DO: ADD IMAGES FROM https://docs.arbitrum.io/arbos/l1-to-l2-messaging 
+      ## Lifecycle of Retryable Tickets 
     name: L1 to L2 Messaging
     stepItems: []
     uuid: 4c6d4203-d72d-45fc-bdbd-c0d8b9dc899d
@@ -140,7 +124,7 @@ steps:
       expects a call from a specific contract address by sending a retryable
       ticket from the expected contract address on L1. This adds an extra layer
       of security and prevents potential vulnerabilities in the system.
-    name: Other Concepts
+    name: Additional Concepts
     stepItems: []
     uuid: 47dca17b-42d8-43ff-a8ae-894f128e993e
   - content: ''
